fixing author reference

--- a/references.bib
+++ b/references.bib
@@ -222,7 +222,7 @@
 
 @online{stanfordhealthcare,
   year = 2021,
-  author = {Stanford Health Care},
+  author = {{Stanford Health Care}},
   title = {What is Cancer?},
   url = {https://stanfordhealthcare.org/medical-conditions/cancer/cancer.html}
 }
