adding zoomed in plot of nonstandardized data

--- a/classification1.Rmd
+++ b/classification1.Rmd
@@ -819,10 +819,10 @@ gridExtra::grid.arrange(unscaled, scaled, ncol = 2)
 ```
 </center>
 
-```{r 05-scaling-plt-zoomed, echo = FALSE, fig.cap = "Zoomed in plot of unstandardized data"}
+```{r 05-scaling-plt-zoomed, fig.height = 4, fig.width = 10, echo = FALSE, fig.cap = "Close up of three nearest neighbors for unstandardized data"}
 library(ggforce)
 ggplot(unscaled_cancer, aes(x = Area, y = Smoothness, group = Class, color = Class, shape = Class)) +
-  geom_point(size = 2) + 
+  geom_point(size = 2.5, alpha = 0.8) + 
   scale_color_manual(name = "Diagnosis", 
                      labels = c("Benign", "Malignant", "Unknown"), 
                      values = c("steelblue2", "orange2", "red")) +
@@ -844,9 +844,8 @@ ggplot(unscaled_cancer, aes(x = Area, y = Smoothness, group = Class, color = Cla
     x = unlist(new_obs[1]), y = unlist(new_obs[2]),
     xend = unlist(neighbours[3, attrs[1]]),
     yend = unlist(neighbours[3, attrs[2]])
-  ), color = "black") + 
-  theme_bw() + 
- facet_zoom(ylim = c(0.075, 0.150), xlim= c(399.5, 402)) 
+  ), color = "black") +   theme_light() +  
+ facet_zoom( xlim= c(399.7, 401.6), ylim = c(0.08, 0.14), zoom.size = 2) 
 ```
 
 ### Balancing
