reordering more than 2 predictors section

--- a/classification1.Rmd
+++ b/classification1.Rmd
@@ -191,7 +191,7 @@ cancer |>
 
 Next, let's draw a scatter plot to visualize the relationship between the
 perimeter and concavity variables. Rather than use `ggplot's` default palette,
-we define our own colourblind-friendly palette using two colours&mdash;`"orange2"` 
+we define our own colourblind-friendly colors using&mdash;`"orange2"` 
 for light orange and `"steelblue2"` for light blue&mdash;and
  pass them as the `values` argument to the `scale_color_manual` function. 
 We also make the category labels ("B" and "M") more readable by 
@@ -472,7 +472,19 @@ predictor space).  Each predictor variable may give us new
 information to help create our classifier.  The only difference is the formula
 for the distance between points. 
 
-In particular, let's say we have three predictor
+Suppose we have $m$ predictor
+variables for two observations $a$ and $b$, i.e., 
+$a = (a_{1}, a_{2}, \dots, a_{m})$ and
+$b = (b_{1}, b_{2}, \dots, b_{m})$.
+
+The distance formula becomes
+
+$$\mathrm{Distance} = \sqrt{(a_{1} -b_{1})^2 + (a_{2} - b_{2})^2 + \dots + (a_{m} - b_{m})^2}.$$
+
+This formula still corresponds to a straight-line distance, just in a space with 
+more dimensions. 
+
+Let's say we have three predictor
 variables, perimeter, concavity, and symmetry (so, a 3-dimensional space) for two observations where
 $observation_1 = (0.417, 2.31, 0.837)$ and $observation_2 = (0, 3.5, 1)$.
 Previously, when we had two variables, we added up the squared difference between each of our (two) variables,
@@ -542,18 +554,6 @@ general we recommend against using 3D visualizations; here we show the data in
 for learning purposes.*
 
 
-We can extend the distance formula beyond three predictors. Suppose we have $m$ predictor
-variables for two observations $a$ and $b$, i.e., 
-$a = (a_{1}, a_{2}, \dots, a_{m})$ and
-$b = (b_{1}, b_{2}, \dots, b_{m})$.
-
-The distance formula becomes
-
-$$\mathrm{Distance} = \sqrt{(a_{1} -b_{1})^2 + (a_{2} - b_{2})^2 + \dots + (a_{m} - b_{m})^2}.$$
-
-This formula still corresponds to a straight-line distance, just in a space with 
-more dimensions. 
-
 ### Summary of K-nearest neighbors algorithm
 
 In order to classify a new observation using a K-nearest neighbor classifier, we have to:
@@ -602,7 +602,7 @@ by calling the `nearest_neighbor` function, specifying that we want to use $K = 
 distance (`weight_func = "rectangular"`). The `weight_func` argument controls
 how neighbors vote when classifying a new observation; by setting it to `"rectangular"`,
 each of the $K$ nearest neighbors gets exactly 1 vote as described above. Other choices, 
-which weight each neighbor's  vote differently,  can be found on 
+which weight each neighbor's  vote differently, can be found on 
 [the tidymodels website](https://parsnip.tidymodels.org/reference/nearest_neighbor.html).
 In the `set_engine` argument, we specify which package or system will be used for training
 the model. In this case, `kknn` is an R package for performing k-nearest neighbors classification.
