changing tumour to american spelling

--- a/classification1.Rmd
+++ b/classification1.Rmd
@@ -52,8 +52,8 @@ we use these data to train, or teach, our classifier. Once taught, we can use
 the classifier to make predictions on new data for which we do not know the class.
 
 There are many possible methods that we could use to predict
-a categorical class/label for an observation. In this book we will
-focus on the simple, widely used **K-nearest neighbors** algorithm.
+a categorical class/label for an observation. In this book, we will
+focus on the widely used **K-nearest neighbors** algorithm.
 In your future studies, you might encounter decision trees, support vector machines (SVMs),
 logistic regression, neural networks, and more; see the additional resources
 section at the end of the next chapter for where to begin learning more about
@@ -70,22 +70,22 @@ In this chapter and the next, we will study a data set of
 [digitized breast cancer image features](http://archive.ics.uci.edu/ml/datasets/Breast+Cancer+Wisconsin+%28Diagnostic%29),
 created by Dr. William H. Wolberg, W. Nick Street, and Olvi L. Mangasarian at
 the University of Wisconsin, Madison. Each row in the data set represents an
-image of a tumour sample including the diagnosis (benign or malignant) and
+image of a tumor sample, including the diagnosis (benign or malignant) and
 several other measurements (nucleus texture, perimeter, area, and more).
 Diagnosis for each image was conducted by physicians. 
 
 As with all data analyses, we first need to formulate a precise question that
-we want to answer. Here, the question is *predictive*: can we use the tumour
-image measurements available to us to predict whether a future tumour image
-(with unknown diagnosis) shows a benign or malignant tumour? Answering this
-question is important because traditional, non-data-driven methods for tumour
+we want to answer. Here, the question is *predictive*: can we use the tumor
+image measurements available to us to predict whether a future tumor image
+(with unknown diagnosis) shows a benign or malignant tumor? Answering this
+question is important because traditional, non-data-driven methods for tumor
 diagnosis are quite subjective and dependent upon how skilled and experienced
-the diagnosing physician is. Furthermore, benign tumours are not normally
-dangerous; the cells stay in the same place and the tumour stops growing before
-it gets very large. By contrast, in malignant tumours, the cells invade the
+the diagnosing physician is. Furthermore, benign tumors are not normally
+dangerous; the cells stay in the same place and the tumor stops growing before
+it gets very large. By contrast, in malignant tumors, the cells invade the
 surrounding tissue and spread into nearby organs where they can cause serious
 damage (@stanfordhealthcare).
-Thus, it is important to quickly and accurately diagnose the tumour type to
+Thus, it is important to quickly and accurately diagnose the tumor type to
 guide patient treatment.
 
 ### Loading the cancer data
@@ -109,7 +109,7 @@ cancer
 
 ### Describing the variables in the cancer data set
 
-Breast tumours can be diagnosed by performing a *biopsy*, a process where
+Breast tumors can be diagnosed by performing a *biopsy*, a process where
 tissue is removed from the body and examined for the presence of disease.
 Traditionally these procedures were quite invasive; modern methods such as fine
 needle asipiration, used to collect the present data set, extract only a small
@@ -175,9 +175,9 @@ cancer |>
 
 Before we start doing any modelling, let's explore our data set. Below we use
 the `group_by`, `summarize` and `n` functions to find the number and percentage 
-of benign and maligant tumour observations in our data set. The `n` function within
+of benign and maligant tumor observations in our data set. The `n` function within
 the `summarize` function counts the number of observations in each `Class` group. 
-We have 357 (63\%) benign and 212 (37\%) malignant tumour observations.
+We have 357 (63\%) benign and 212 (37\%) malignant tumor observations.
 
 ```{r 05-tally}
 num_obs <- nrow(cancer)
@@ -213,7 +213,7 @@ tend to have lower concavity and perimeter values, and malignant ones tends to h
 concavity and perimeter values. Suppose we
 obtain a new observation not in the current data set that has all the variables
 measured *except* the label (i.e., an image without the physician's diagnosis
-for the tumour class). We could compute the perimeter and concavity values,
+for the tumor class). We could compute the perimeter and concavity values,
 resulting in values of, say, 1 and 1. Could we use this information to classify
 that observation as benign or malignant? Based on the scatter plot, how might 
 you classify that new observation? How would you classify a new observation with
@@ -544,8 +544,7 @@ scaled_cancer_3 |>
     xaxis = list(title = "Perimeter (standardized)"),
     yaxis = list(title = "Concavity (standardized)"),
     zaxis = list(title = "Symmetry (standardized)")
-  )) 
-
+  ))
 ```
 
 *Click and drag the plot above to rotate it, and scroll to zoom. Note that in
@@ -913,7 +912,7 @@ detection, there are many cases in which the "important" class to identify
 class (no disease, normal email).
 
 To better illustrate the problem, let's revisit the scaled breast cancer data, 
-`cancer`; except now we will remove many of the observations of malignant tumours, simulating
+`cancer`; except now we will remove many of the observations of malignant tumors, simulating
 what the data would look like if the cancer was rare. We will do this by
 picking only 3 observations randomly from the malignant group, and keeping all
 of the benign observations. We choose these 3 observations using the `slice_sample`
@@ -939,7 +938,7 @@ rare_plot
 ```
 > Note: You will see in the code above that we use the `set.seed` function.
 > This is because we are using `slice_sample` to artificially pick only 3 of
-> the malignant tumour observations, which uses random sampling to choose which
+> the malignant tumor observations, which uses random sampling to choose which
 > rows will be in the training set. In order to make the code reproducible, we
 > use `set.seed` to specify where the random number generator starts for this
 > process, which then guarantees the same result, i.e., the same choice of 3
@@ -948,12 +947,12 @@ rare_plot
 > `set.seed`; if you want a *different result* each time, you should not.
 
 Suppose we now decided to use $K = 7$ in K-nearest neighbor classification.
-With only 3 observations of malignant tumours, the classifier 
-will *always predict that the tumour is benign, no matter what its concavity and perimeter
+With only 3 observations of malignant tumors, the classifier 
+will *always predict that the tumor is benign, no matter what its concavity and perimeter
 are!* This is because in a majority vote of 7 observations, at most 3 will be
 malignant (we only have 3 total malignant observations), so at least 4 must be
 benign, and the benign vote will always win. For example, Figure \@ref(fig:05-upsample)
-shows what happens for a new tumour observation that is quite close to three observations
+shows what happens for a new tumor observation that is quite close to three observations
 in the training data that were tagged as malignant.
 
 
@@ -1045,8 +1044,8 @@ Now suppose we train our K-nearest neighbor classifier with $K=7$ on this *balan
 Figure \@ref(fig:05-upsample-plot) shows what happens now when we set the background colour 
 of each area of our scatter plot to the decision the K-nearest neighbor 
 classifier would make. We can see that the decision is more reasonable; when the points are close
-to those labelled malignant, the classifier predicts a malignant tumour, and vice versa when they are 
-closer to the benign tumour observations.
+to those labelled malignant, the classifier predicts a malignant tumor, and vice versa when they are 
+closer to the benign tumor observations.
 
 ```{r 05-upsample-plot, echo = FALSE, fig.height = 4, fig.width = 5, fig.cap = "Upsampled data with background colour indicating the decision of the classifier"}
 
